# scout_multifloor_navigation

./: .gitignore  README.md  Selim.md  scout_v2.xacro  videos.md
ros2_aruco/ros2_aruco/launch/: aruco_recognition.launch.py
scout/scout_description/urdf/: scout_sensors.gazebo  scout_sensors.xacro
scout/scout_gazebo_sim/launch/: scout_hospital_floors.launch.py  scout_v2_empty_world.launch.py
scout/scout_gazebo_sim/maps/: hospital_deneme.yaml  hospital_floor2.pgm  hospital_floor2.yaml
scout/scout_gazebo_sim/models/aruco_marker_0/: model.config  model.sdf
scout/scout_gazebo_sim/models/aruco_marker_1/: model.config
scout/scout_gazebo_sim/worlds/: hospital_two_floors_markes.world  hospital_with_markers.world
src/team4_bringup/: setup.py
src/team4_bringup/launch/: navigation.launch.py
src/team4_multifloor/team4_maps/maps/: floor1.yaml  floor2.pgm  floor2.yaml
team4_multifloor/team4_maps/maps/: floor1.pgm
ugv_gazebo_sim/scout/: README.md
ugv_gazebo_sim/scout/scout_gazebo_sim/: CMakeLists.txt
ugv_gazebo_sim/scout/scout_gazebo_sim/config/: mapper_params_online_async.yaml
ugv_gazebo_sim/scout/scout_gazebo_sim/launch/: scout_hospital.launch.py  scout_hospital_floors.launch.py
ugv_gazebo_sim/scout/scout_gazebo_sim/maps/: hospital_deneme.pgm
ugv_gazebo_sim/scout/scout_gazebo_sim/models/aruco_marker_0/materials/scripts/: aruco.material
ugv_gazebo_sim/scout/scout_gazebo_sim/models/aruco_marker_1/: model.sdf
ugv_gazebo_sim/scout/scout_gazebo_sim/scripts/: floor_detector.py
ugv_gazebo_sim/scout/scout_gazebo_sim/worlds/: hospital_with_markers.world
(+5 files in other folders)
